croaring-sys/CRoaring/bindgen_bundled_version.rs

pub type roaring_memory_t = roaring_memory_s;
extern "C" {
    pub fn roaring_init_memory_hook(memory_hook: roaring_memory_t);
}
extern "C" {
    pub fn roaring_malloc(arg1: usize) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn roaring_realloc(arg1: *mut ::core::ffi::c_void, arg2: usize)
        -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn roaring_calloc(arg1: usize, arg2: usize) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn roaring_free(arg1: *mut ::core::ffi::c_void);
}
extern "C" {
    pub fn roaring_aligned_malloc(arg1: usize, arg2: usize) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn roaring_aligned_free(arg1: *mut ::core::ffi::c_void);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct roaring64_bitmap_s {
    _unused: [u8; 0],
}
pub type roaring64_bitmap_t = roaring64_bitmap_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct roaring64_leaf_s {
    _unused: [u8; 0],
}
pub type roaring64_leaf_t = roaring64_leaf_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct roaring64_iterator_s {
    _unused: [u8; 0],
}
pub type roaring64_iterator_t = roaring64_iterator_s;
#[doc = " A bit of context usable with `roaring64_bitmap_*_bulk()` functions.\n\n Should be initialized with `{0}` (or `memset()` to all zeros).\n Callers should treat it as an opaque type.\n\n A context may only be used with a single bitmap (unless re-initialized to\n zero), and any modification to a bitmap (other than modifications performed\n with `_bulk()` functions with the context passed) will invalidate any\n contexts associated with that bitmap."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct roaring64_bulk_context_s {
    pub high_bytes: [u8; 6usize],
    pub leaf: *mut roaring64_leaf_t,
}
#[doc = " A bit of context usable with `roaring64_bitmap_*_bulk()` functions.\n\n Should be initialized with `{0}` (or `memset()` to all zeros).\n Callers should treat it as an opaque type.\n\n A context may only be used with a single bitmap (unless re-initialized to\n zero), and any modification to a bitmap (other than modifications performed\n with `_bulk()` functions with the context passed) will invalidate any\n contexts associated with that bitmap."]
pub type roaring64_bulk_context_t = roaring64_bulk_context_s;
extern "C" {
    #[doc = " Dynamically allocates a new bitmap (initially empty).\n Client is responsible for calling `roaring64_bitmap_free()`."]
    pub fn roaring64_bitmap_create() -> *mut roaring64_bitmap_t;
}
extern "C" {
    pub fn roaring64_bitmap_free(r: *mut roaring64_bitmap_t);
}
extern "C" {
    #[doc = " Returns a copy of a bitmap."]
    pub fn roaring64_bitmap_copy(r: *const roaring64_bitmap_t) -> *mut roaring64_bitmap_t;
}
extern "C" {
    #[doc = " Creates a new bitmap of a pointer to N 64-bit integers."]
    pub fn roaring64_bitmap_of_ptr(n_args: usize, vals: *const u64) -> *mut roaring64_bitmap_t;
}
extern "C" {
    #[doc = " Create a new bitmap by moving containers from a 32 bit roaring bitmap.\n\n After calling this function, the original bitmap will be empty, and the\n returned bitmap will contain all the values from the original bitmap."]
    pub fn roaring64_bitmap_move_from_roaring32(
        r: *mut roaring_bitmap_t,
    ) -> *mut roaring64_bitmap_t;
}
extern "C" {
    #[doc = " Create a new bitmap containing all the values in [min, max) that are at a\n distance k*step from min."]
    pub fn roaring64_bitmap_from_range(min: u64, max: u64, step: u64) -> *mut roaring64_bitmap_t;
}
extern "C" {
    #[doc = " Adds the provided value to the bitmap."]
    pub fn roaring64_bitmap_add(r: *mut roaring64_bitmap_t, val: u64);
}
extern "C" {
    #[doc = " Adds the provided value to the bitmap.\n Returns true if a new value was added, false if the value already existed."]
    pub fn roaring64_bitmap_add_checked(r: *mut roaring64_bitmap_t, val: u64) -> bool;
}
extern "C" {
    #[doc = " Add an item, using context from a previous insert for faster insertion.\n\n `context` will be used to store information between calls to make bulk\n operations faster. `*context` should be zero-initialized before the first\n call to this function.\n\n Modifying the bitmap in any way (other than `-bulk` suffixed functions)\n will invalidate the stored context, calling this function with a non-zero\n context after doing any modification invokes undefined behavior.\n\n In order to exploit this optimization, the caller should call this function\n with values with the same high 48 bits of the value consecutively."]
    pub fn roaring64_bitmap_add_bulk(
        r: *mut roaring64_bitmap_t,
        context: *mut roaring64_bulk_context_t,
        val: u64,
    );
}
extern "C" {
    #[doc = " Add `n_args` values from `vals`, faster than repeatedly calling\n `roaring64_bitmap_add()`\n\n In order to exploit this optimization, the caller should attempt to keep\n values with the same high 48 bits of the value as consecutive elements in\n `vals`."]
    pub fn roaring64_bitmap_add_many(r: *mut roaring64_bitmap_t, n_args: usize, vals: *const u64);
}
extern "C" {
    #[doc = " Add all values in range [min, max)."]
    pub fn roaring64_bitmap_add_range(r: *mut roaring64_bitmap_t, min: u64, max: u64);
}
extern "C" {
    #[doc = " Add all values in range [min, max]."]
    pub fn roaring64_bitmap_add_range_closed(r: *mut roaring64_bitmap_t, min: u64, max: u64);
}
extern "C" {
    #[doc = " Removes a value from the bitmap if present."]
    pub fn roaring64_bitmap_remove(r: *mut roaring64_bitmap_t, val: u64);
}
extern "C" {
    #[doc = " Removes a value from the bitmap if present, returns true if the value was\n removed and false if the value was not present."]
    pub fn roaring64_bitmap_remove_checked(r: *mut roaring64_bitmap_t, val: u64) -> bool;
}
extern "C" {
    #[doc = " Remove an item, using context from a previous insert for faster removal.\n\n `context` will be used to store information between calls to make bulk\n operations faster. `*context` should be zero-initialized before the first\n call to this function.\n\n Modifying the bitmap in any way (other than `-bulk` suffixed functions)\n will invalidate the stored context, calling this function with a non-zero\n context after doing any modification invokes undefined behavior.\n\n In order to exploit this optimization, the caller should call this function\n with values with the same high 48 bits of the value consecutively."]
    pub fn roaring64_bitmap_remove_bulk(
        r: *mut roaring64_bitmap_t,
        context: *mut roaring64_bulk_context_t,
        val: u64,
    );
}
extern "C" {
    #[doc = " Remove `n_args` values from `vals`, faster than repeatedly calling\n `roaring64_bitmap_remove()`\n\n In order to exploit this optimization, the caller should attempt to keep\n values with the same high 48 bits of the value as consecutive elements in\n `vals`."]
    pub fn roaring64_bitmap_remove_many(
        r: *mut roaring64_bitmap_t,
        n_args: usize,
        vals: *const u64,
    );
}
extern "C" {
    #[doc = " Remove all values in range [min, max)."]
    pub fn roaring64_bitmap_remove_range(r: *mut roaring64_bitmap_t, min: u64, max: u64);
}
extern "C" {
    #[doc = " Remove all values in range [min, max]."]
    pub fn roaring64_bitmap_remove_range_closed(r: *mut roaring64_bitmap_t, min: u64, max: u64);
}
extern "C" {
    #[doc = " Empties the bitmap."]
    pub fn roaring64_bitmap_clear(r: *mut roaring64_bitmap_t);
}
extern "C" {
    #[doc = " Returns true if the provided value is present."]
    pub fn roaring64_bitmap_contains(r: *const roaring64_bitmap_t, val: u64) -> bool;
}
extern "C" {
    #[doc = " Returns true if all values in the range [min, max) are present."]
    pub fn roaring64_bitmap_contains_range(
        r: *const roaring64_bitmap_t,
        min: u64,
        max: u64,
    ) -> bool;
}
extern "C" {
    #[doc = " Check if an item is present using context from a previous insert or search\n for faster search.\n\n `context` will be used to store information between calls to make bulk\n operations faster. `*context` should be zero-initialized before the first\n call to this function.\n\n Modifying the bitmap in any way (other than `-bulk` suffixed functions)\n will invalidate the stored context, calling this function with a non-zero\n context after doing any modification invokes undefined behavior.\n\n In order to exploit this optimization, the caller should call this function\n with values with the same high 48 bits of the value consecutively."]
    pub fn roaring64_bitmap_contains_bulk(
        r: *const roaring64_bitmap_t,
        context: *mut roaring64_bulk_context_t,
        val: u64,
    ) -> bool;
}
extern "C" {
    #[doc = " Selects the element at index 'rank' where the smallest element is at index 0.\n If the size of the bitmap is strictly greater than rank, then this function\n returns true and sets element to the element of given rank. Otherwise, it\n returns false."]
    pub fn roaring64_bitmap_select(
        r: *const roaring64_bitmap_t,
        rank: u64,
        element: *mut u64,
    ) -> bool;
}
extern "C" {
    #[doc = " Returns the number of integers that are smaller or equal to x. Thus if x is\n the first element, this function will return 1. If x is smaller than the\n smallest element, this function will return 0.\n\n The indexing convention differs between roaring64_bitmap_select and\n roaring64_bitmap_rank: roaring_bitmap64_select refers to the smallest value\n as having index 0, whereas roaring64_bitmap_rank returns 1 when ranking\n the smallest value."]
    pub fn roaring64_bitmap_rank(r: *const roaring64_bitmap_t, val: u64) -> u64;
}
extern "C" {
    #[doc = " Returns true if the given value is in the bitmap, and sets `out_index` to the\n (0-based) index of the value in the bitmap. Returns false if the value is not\n in the bitmap."]
    pub fn roaring64_bitmap_get_index(
        r: *const roaring64_bitmap_t,
        val: u64,
        out_index: *mut u64,
    ) -> bool;
}
extern "C" {
    #[doc = " Returns the number of values in the bitmap."]
    pub fn roaring64_bitmap_get_cardinality(r: *const roaring64_bitmap_t) -> u64;
}
extern "C" {
    #[doc = " Returns the number of elements in the range [min, max)."]
    pub fn roaring64_bitmap_range_cardinality(
        r: *const roaring64_bitmap_t,
        min: u64,
        max: u64,
    ) -> u64;
}
extern "C" {
    #[doc = " Returns the number of elements in the range [min, max]"]
    pub fn roaring64_bitmap_range_closed_cardinality(
        r: *const roaring64_bitmap_t,
        min: u64,
        max: u64,
    ) -> u64;
}
extern "C" {
    #[doc = " Returns true if the bitmap is empty (cardinality is zero)."]
    pub fn roaring64_bitmap_is_empty(r: *const roaring64_bitmap_t) -> bool;
}
extern "C" {
    #[doc = " Returns the smallest value in the set, or UINT64_MAX if the set is empty."]
    pub fn roaring64_bitmap_minimum(r: *const roaring64_bitmap_t) -> u64;
}
extern "C" {
    #[doc = " Returns the largest value in the set, or 0 if empty."]
    pub fn roaring64_bitmap_maximum(r: *const roaring64_bitmap_t) -> u64;
}
extern "C" {
    #[doc = " Returns true if the result has at least one run container."]
    pub fn roaring64_bitmap_run_optimize(r: *mut roaring64_bitmap_t) -> bool;
}
extern "C" {
    #[doc = "  (For advanced users.)\n Collect statistics about the bitmap"]
    pub fn roaring64_bitmap_statistics(
        r: *const roaring64_bitmap_t,
        stat: *mut roaring64_statistics_t,
    );
}
